remove arrow from get free on small devices. fix on the download our app spacing section

--- a/public/sass/modules/_typography.scss
+++ b/public/sass/modules/_typography.scss
@@ -9,7 +9,7 @@ $big-button-link-font: 1.375em Roboto;
 
 $head-big-bold-font: 800 1.875em Raleway;
 $head-big-medium-font: 500 1.875em Raleway;
-$head-big-light-font: 300 2.000em Raleway;
+$head-big-light-font: 300 1.875em Raleway;
 $head-largest-bold-font: 800 2.375em Raleway;
 
 /////medium
