--- a/public/sass/partials/_get-it-free.scss
+++ b/public/sass/partials/_get-it-free.scss
@@ -20,6 +20,9 @@
       height: 4em;
       width: 2em;
       margin-left: 2em;
+      @media screen and (max-width: 550px) {
+        display: none;
+      }
     }
   }
 }
